--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,12 +25,14 @@
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "marked": "^15.0.8",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5"
