--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,13 +14,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.3",
+    "@types/node": "^20.19.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "socket.io": "^4.8.1",
-    "@types/node": "^22.15.32",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.3"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
