--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,2 @@
-VITE_SOCKET_URL=https://dev-launchpad-tools-game-app.onrender.com/
+VITE_SOCKET_URL=https://dev-launchpad-tools-game-app.onrender.com
 # http://localhost:3001 - for local development
